--- a/product_backend/package.json
+++ b/product_backend/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.15.0",
+    "cors": "2.7.1",
     "express": "4.13.4",
     "mongoose": "4.4.10",
-    "cors": "2.7.1"
+    "uuid": "^8.3.2"
   }
 }
