--- a/product_backend/package.json
+++ b/product_backend/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.0",
+    "body-parser": "^1.19.0",
     "cors": "2.7.1",
-    "express": "4.13.4",
+    "express": "^4.17.1",
     "mongoose": "4.4.10",
     "uuid": "^8.3.2"
   }
